fix aside footer overlap on short screens

--- a/project1/styles/styles.css
+++ b/project1/styles/styles.css
@@ -579,6 +579,7 @@ fieldset {
 	top: 150px;
 	margin-left: -10px;
 	box-shadow: 5px 10px mediumseagreen;
+	margin-bottom: 25px;
 }
 
 .aside_header {
